--- a/NgheNhacTrucTuyen/Views/QLBH/DSBaiHat.cshtml
+++ b/NgheNhacTrucTuyen/Views/QLBH/DSBaiHat.cshtml
@@ -4,9 +4,8 @@
 
 <div class="Root__main-view">
     <div class="main-view-container">
-        <div style="margin-top: 60px;">
-
-        </div>
+        <div style="margin-top: 60px;"> </div>
+        <br />
         <button class="tablink" onclick="openPage('Home', this, 'green')" id="defaultOpen">Danh sách bài hát</button>
         <button class="tablink" onclick="openPage('News', this, 'green')">Ca sĩ</button>
         <button class="tablink" onclick="openPage('Contact', this, 'green')">Thể loại</button>
