--- a/NgheNhacTrucTuyen/Views/Shared/_Layout.cshtml
+++ b/NgheNhacTrucTuyen/Views/Shared/_Layout.cshtml
@@ -139,7 +139,7 @@
                             <i class="fa-solid fa-angle-left"></i>
                         </button>
                         
-                        <button data-testid="top-bar-forward-button" aria-label="Tiếp theo" disabled="" class="btn forward-button" onclick="history.forward();">
+                        <button aria-label="Tiếp theo" class="btn forward-button" onclick="history.forward();">
                             <i class="fa-solid fa-angle-right"></i>
                         </button>
                     </div>
