--- a/NgheNhacTrucTuyen/Views/ChuDe/CreateCD.cshtml
+++ b/NgheNhacTrucTuyen/Views/ChuDe/CreateCD.cshtml
@@ -45,9 +45,10 @@
                     @ViewBag.ok
                     @ViewBag.sucess
 
-                    <div class="form-group form-submit">
-                        <input type="submit" value="Thêm mới" class="btn-submit" />
-                    </div>
+                <div class="form-group form-submit">
+                    <input type="submit" value="Thêm mới" class="btn-submit" />
+                    <button onclick="window.location.href='/QLBH/DSBaiHat'" type="button" class="btn-back">Back</button>
+                </div>
                 </div>
             </div>
         }
@@ -132,7 +133,7 @@
         display: inline-block;
         background-color: #444;
         color: #fff;
-        padding: 8px 16px;
+        padding: 10px 20px;
         border-radius: 4px;
         text-decoration: none;
     }
