--- a/NgheNhacTrucTuyen/Views/ChuDe/EditCD.cshtml
+++ b/NgheNhacTrucTuyen/Views/ChuDe/EditCD.cshtml
@@ -39,6 +39,7 @@
 
                 <div class="form-submit">
                     <input type="submit" value="Lưu" class="btn-submit" />
+                    <button onclick="window.location.href='/QLBH/DSBaiHat'" type="button" class="btn-back">Back</button>
                 </div>
             </div>
         }
@@ -120,18 +121,16 @@
         margin-top: 20px;
     }
 
-    .back-link {
-        text-align: center;
-        margin-top: 20px;
+    .btn-back {
+        display: inline-block;
+        background-color: #444;
+        color: #fff;
+        padding: 10px 20px;
+        border-radius: 4px;
+        text-decoration: none;
     }
 
-        .back-link a {
-            color: #1DB954;
-            font-size: 16px;
-            text-decoration: none;
+        .btn-back:hover {
+            background-color: #333;
         }
-
-            .back-link a:hover {
-                color: #1aa34a;
-            }
 </style>
