--- a/NgheNhacTrucTuyen/Views/QLBH/Detail.cshtml
+++ b/NgheNhacTrucTuyen/Views/QLBH/Detail.cshtml
@@ -61,6 +61,10 @@
                     @ViewBag.detail.ChuDe.TenCD
                 </dd>
             </dl>
+
+            <div class="form-submit">
+                <button onclick="window.location.href='/QLBH/DSBaiHat'" type="button" class="btn-back">Back</button>
+            </div>
         </div>
 
     </div>
@@ -138,6 +142,22 @@
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     }
 
+    .btn-back {
+        display: inline-block;
+        background-color: #444;
+        color: #fff;
+        padding: 5px 10px;
+        border-radius: 4px;
+        text-decoration: none;
+    }
+
+        .btn-back:hover {
+            background-color: #333;
+        }
+    .form-submit {
+        text-align: right;
+       
+    }
     /* Responsiveness for smaller screens */
     
 </style>
