--- a/NgheNhacTrucTuyen/Views/CaSi/EditCS.cshtml
+++ b/NgheNhacTrucTuyen/Views/CaSi/EditCS.cshtml
@@ -31,9 +31,10 @@
 
                     @ViewBag.ok
 
-                    <div class="form-group form-submit">
-                        <input type="submit" value="Save" class="btn-submit" />
-                    </div>
+                <div class="form-group form-submit">
+                    <input type="submit" value="Save" class="btn-submit" />
+                    <button onclick="window.location.href='/QLBH/DSBaiHat'" type="button" class="btn-back">Back</button>
+                </div>
                 </div>
             </div>
         }
@@ -119,12 +120,12 @@
         display: inline-block;
         background-color: #444;
         color: #fff;
-        padding: 8px 16px;
+        padding: 10px 20px;
         border-radius: 4px;
         text-decoration: none;
     }
 
-        .btn-back:hover {
-            background-color: #333;
-        }
+    .btn-back:hover {
+        background-color: #333;
+    }
 </style>
