--- a/NgheNhacTrucTuyen/Views/QLBH/Create.cshtml
+++ b/NgheNhacTrucTuyen/Views/QLBH/Create.cshtml
@@ -60,6 +60,7 @@
 
                     <div class="form-group form-submit">
                         <input type="submit" value="Thêm" class="btn-submit" />
+                        <button onclick="window.location.href='/QLBH/DSBaiHat'" type="button" class="btn-back">Back</button>
                     </div>
                 </div>
             </div>
@@ -144,5 +145,17 @@
 
         .btn-submit:hover {
             background-color: #1aa34a;
+        }
+    .btn-back {
+        display: inline-block;
+        background-color: #444;
+        color: #fff;
+        padding: 10px 20px;
+        border-radius: 4px;
+        text-decoration: none;
+    }
+
+        .btn-back:hover {
+            background-color: #333;
         }
 </style>
