--- a/NgheNhacTrucTuyen/Views/TheLoai/CreateTL.cshtml
+++ b/NgheNhacTrucTuyen/Views/TheLoai/CreateTL.cshtml
@@ -30,9 +30,10 @@
 
                     @ViewBag.sucess
 
-                    <div class="form-group form-submit">
-                        <input type="submit" value="Thêm" class="btn-submit" />
-                    </div>
+                <div class="form-group form-submit">
+                    <input type="submit" value="Thêm" class="btn-submit" />
+                    <button onclick="window.location.href='/QLBH/DSBaiHat'" type="button" class="btn-back">Back</button>
+                </div>
                 </div>
             </div>
         }
@@ -118,7 +119,7 @@
         display: inline-block;
         background-color: #444;
         color: #fff;
-        padding: 8px 16px;
+        padding: 10px 20px;
         border-radius: 4px;
         text-decoration: none;
     }
