--- a/NgheNhacTrucTuyen/Views/Home/Index.cshtml
+++ b/NgheNhacTrucTuyen/Views/Home/Index.cshtml
@@ -62,7 +62,7 @@
                                                             if (item.MaTL == item1.MaTL)
                                                             {
 
-                                                                <div class="LunqxlFIupJw_Dkx6mNx">
+                                                                <div onclick="window.location.href='/Home/Baihat/@item.MaBH'" class="LunqxlFIupJw_Dkx6mNx">
                                                                     <div draggable="true"
                                                                          class="XiVwj5uoqqSFpS4cYOC6">
                                                                         <div class="xBV4XgMq0gC5lQICFWY_">
@@ -81,7 +81,7 @@
                                                                             <div class="woJQ5t2YiaJhjTv_KE7p">
                                                                                 <div class="PFgcCoJSWC3KjhZxHDYH">
                                                                                     <button data-testid="play-button"
-                                                                                            onclick="playaudio1('/Sound/@item.Files', '/image/@item.image', '@item.TenBH', '@item.CaSi.TenCS' )"
+                                                                                            onclick="event.stopPropagation(); playaudio1('/Sound/@item.Files', '/image/@item.image', '@item.TenBH', '@item.CaSi.TenCS' )"
                                                                                             class="Button-qlcn5g-0 cKBTSk">
                                                                                         <i class="fa-solid fa-circle-play fa-3x"></i>
                                                                                     </button>
