--- a/NgheNhacTrucTuyen/Views/Home/BaiHatYeuThich.cshtml
+++ b/NgheNhacTrucTuyen/Views/Home/BaiHatYeuThich.cshtml
@@ -130,7 +130,7 @@
                                                          aria-colindex="1"
                                                          aria-sort="none"
                                                          tabindex="-1">
-                                                        #
+                                                        
                                                     </div>
                                                     <div class="gvLrgQXBFVW6m9MscfFA"
                                                          role="columnheader"
@@ -138,7 +138,7 @@
                                                          aria-sort="none"
                                                          tabindex="-1">
                                                         <div class="ASYv4mEu1lXEHVa04HqY">
-                                                            <span class="Type__TypeElement-goli3j-0 llIfol standalone-ellipsis-one-line">tiêu đề</span>
+                                                            <span class="Type__TypeElement-goli3j-0 llIfol standalone-ellipsis-one-line">Tiêu đề</span>
                                                         </div>
                                                     </div>
                                                     <div class="bfQ2S9bMXr_kJjqEfcwA"
@@ -147,7 +147,7 @@
                                                          aria-sort="none"
                                                          tabindex="-1">
                                                         <div class="ASYv4mEu1lXEHVa04HqY">
-                                                            <span class="Type__TypeElement-goli3j-0 llIfol standalone-ellipsis-one-line">thể loại</span>
+                                                            <span class="Type__TypeElement-goli3j-0 llIfol standalone-ellipsis-one-line">Thể loại</span>
                                                         </div>
                                                     </div>
                                                     <div class="bfQ2S9bMXr_kJjqEfcwA"
@@ -156,7 +156,7 @@
                                                          aria-sort="none"
                                                          tabindex="-1">
                                                         <div class="ASYv4mEu1lXEHVa04HqY">
-                                                            <span class="Type__TypeElement-goli3j-0 llIfol standalone-ellipsis-one-line">ngày phát hành</span>
+                                                            <span class="Type__TypeElement-goli3j-0 llIfol standalone-ellipsis-one-line">Ngày phát hành</span>
                                                         </div>
                                                     </div>
                                                     <div class="HcMOFLaukKJdK5LfdHh0"
@@ -167,7 +167,7 @@
                                                         <div aria-label="thời lượng"
                                                              class="ASYv4mEu1lXEHVa04HqY AgiCqnZUliKs_dafpdyi"
                                                              aria-expanded="false">
-                                                            <i class="fa-regular fa-clock"></i>
+                                                           
                                                         </div>
                                                     </div>
                                                 </div>
@@ -209,7 +209,7 @@
                                                                          aria-colindex="1"
                                                                          tabindex="-1">
                                                                         <div class="VpYFchIiPg3tPhBGyynT">
-                                                                            <span class="Type__TypeElement-goli3j-0 ipKmGr VrRwdIZO0sRX1lsWxJBe">1</span>
+                                                                            <span class="Type__TypeElement-goli3j-0 ipKmGr VrRwdIZO0sRX1lsWxJBe">@item.Nhac.MaBH</span>
                                                                             <button class="RfidWIoz8FON2WhFoItU" onclick="playaudio1('/Sound/@item.Nhac.Files', '/image/@item.Nhac.image', '@item.Nhac.TenBH', '@item.Nhac.CaSi.TenCS' )"
                                                                                     aria-label="Phát What Makes You Beautiful của One Direction"
                                                                                     tabindex="-1">
