--- a/NgheNhacTrucTuyen/Views/QLTK/EditTK.cshtml
+++ b/NgheNhacTrucTuyen/Views/QLTK/EditTK.cshtml
@@ -49,6 +49,7 @@
 
                 <div class="form-group form-submit">
                     <input type="submit" value="Lưu" class="btn-submit" />
+                    <button onclick="window.location.href='/QLTK/DSTaiKhoan'" type="button" class="btn-back">Back</button>
                 </div>
             </div>
         }
@@ -138,5 +139,18 @@
 
         .btn-link:hover {
             text-decoration: underline;
+        }
+
+    .btn-back {
+        display: inline-block;
+        background-color: #444;
+        color: #fff;
+        padding: 10px 20px;
+        border-radius: 4px;
+        text-decoration: none;
+    }
+
+        .btn-back:hover {
+            background-color: #333;
         }
 </style>
