Chỉnh giao diện danh sách

--- a/NgheNhacTrucTuyen/Views/QLBH/DSBaiHat.cshtml
+++ b/NgheNhacTrucTuyen/Views/QLBH/DSBaiHat.cshtml
@@ -16,7 +16,7 @@
             <button class="addbaihat" type="submit">
                 @Html.ActionLink("Thêm bài hát", "Create", "QLBH")
             </button>
-            <div class="card">
+            <div class="card" style="padding-bottom:50px">
                 <div class="card-body">
                     <table class="table table-striped table-hover">
                         <thead>
