Chỉnh lại giao diện hiện thị DSBH

--- a/NgheNhacTrucTuyen/Views/QLBH/DSBaiHat.cshtml
+++ b/NgheNhacTrucTuyen/Views/QLBH/DSBaiHat.cshtml
@@ -59,7 +59,7 @@
             <button class="addbaihat" type="submit">
                 @Html.ActionLink("Thêm ca sĩ", "CreateCS", "CaSi")
             </button>
-            <div class="card">
+            <div class="card" style="padding-bottom:50px">
                 <div class="card-body">
                     <table class="table table-striped table-hover">
                         <thead>
@@ -92,7 +92,7 @@
             <button class="addbaihat" type="submit">
                 @Html.ActionLink("Thêm thể loại", "CreateTL", "TheLoai")
             </button>
-            <div class="card">
+            <div class="card" style="padding-bottom:50px">
                 <div class="card-body">
                     <table class="table table-striped table-hover">
                         <thead>
@@ -125,7 +125,7 @@
             <button class="addbaihat" type="submit">
                 @Html.ActionLink("Thêm chủ đề", "CreateCD", "ChuDe")
             </button>
-            <div class="card">
+            <div class="card" style="padding-bottom:50px">
                 <div class="card-body">
                     <table class="table table-striped table-hover">
                         <thead>
